
syntax = "proto3";


message HelloWorldRequest {
  string name = 1;
}

message HelloWorldResponse {
  string message = 1;
}

service HelloWorldService {
  rpc SayHello(HelloWorldRequest) returns (HelloWorldResponse);
}